--- a/apps/app/project.json
+++ b/apps/app/project.json
@@ -84,6 +84,12 @@
           "codeCoverage": true
         }
       }
+    },
+    "serve-esbuild": {
+      "executor": "@clickup/ngx-esbuild:build",
+      "options": {
+        "serve": true
+      }
     }
   }
 }
