--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "~16.2.0",
     "@angular/language-service": "~16.2.0",
+    "@babel/plugin-syntax-decorators": "^7.22.10",
+    "@babel/plugin-syntax-typescript": "^7.22.5",
+    "@clickup/ngx-esbuild": "^0.1.0",
     "@nx/eslint": "17.0.3",
     "@nx/eslint-plugin": "17.0.3",
     "@nx/jest": "17.0.3",
